2008-06-30  Quentin Mathe <qmathe@club-internet.fr>

	* Source/GNUmakefile: Fixed properly the Linux compilation bug that got 
	previously worked around with r3198. Done by declaring the right POSIX flag.
	* Source/ETGetOptionsDictionary.m:
	Removed stuff from r3198.

2008-06-30  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSString+Etoile.h:
	* Headers/NSURL+Etoile.h:
	Removed AppKit import.

2008-06-17  Quentin Mathe <qmathe@club-internet.fr>

	* Source/ETGetOptionsDictionary.m: Fixed compilation on Ubuntu by declaring 
	optopt and optarg. Needs further investigation because getopt() is reported 
	as an implicit function and doesn't seem to appear by default in unistd.h
	as it should. Bug reported by kpropell on etoile-discuss.

2008-06-05  Yen-Ju Chen <yjchenx gmail>

	* UUID:
	  Update to 1.6.1 with Quentin's fix on uuid_dce_to_string (uuid_dce.c)
	  It passes all tests.

2008-05-16  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSString.h:
	* Source/NSString.m:
	(-appendString:, -appendPath:): Deprecated.
	* Headers/NSURL.h:
	* Source/NSURL.m:
	(-appendPath:): Deprecated.
	(-URLByAppendingPath:): New replacement method for -appendPath:.

2008-04-29  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/Macros.h: Inserted 'unused' attribute to disable warnings when the 
	header is imported.

2008-04-28  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETUUID.h: Made conform to NSCopying.
	* Source/ETUUID.m (-copyWithZone:): Added.

2008-04-23  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETObjectChain.h:
	* Headers/ETFilter.h:
	* Source/ETObjectChain.m:
	* Source/ETFilter.m:
	(-initWithCollection:): Renamed -initWithObjects: to be more inline with 
	usual OpenStep terminology and avoid conflicts with the identically named 
	methods taking a variable number of args.
	(-_buildLinkedListWithCollection:): Renamed -_buildLinkedListWithObjects: 
	to match the previous change.

2008-04-23  Quentin Mathe <qmathe@club-internet.fr>
