@@ -1,3 +1,9 @@
+2008-07-25  Quentin Mathe <qmathe@club-internet.fr>
+
+	* Headers/NSObject+Etoile.h:
+	* Source/NSObject+Etoile.m:
+	(+[ETProtocol protocolForName:): New method.
+
 2008-06-30  Quentin Mathe <qmathe@club-internet.fr>
 
 	* Source/GNUmakefile: Fixed properly the Linux compilation bug that got 
